--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "la-cabina-estetica",
+  "name": "frodyta",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,21 +7,33 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.2",
+    "@ant-design/icons": "^6.1.0",
+    "@react-firebase/auth": "^0.2.10",
+    "@react-oauth/google": "^0.12.2",
     "@types/jspdf": "^1.3.3",
+    "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.27.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.4.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -30,11 +42,12 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "jsdom": "^27.0.1",
     "postcss": "^8.4.35",
-    "supabase": "^2.39.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vitest": "^4.0.2"
   }
 }
